==> conservationtechlab/tinyscrubcam/googleCoralBuild/googleCoral/coralmicro/third_party/nxp/rt1176-sdk/middleware/wiced/43xxx_Wi-Fi/WICED/platform/MCU/STM32L4xx/WAF/waf_platform.c <==
#include <string.h>
#include <stdlib.h>
#include "spi_flash.h"
#include "platform_config.h"
#include "platform_peripheral.h"
#include "wwd_assert.h"
#include "wiced_framework.h"
#include "elf.h"
#include "wiced_apps_common.h"
#include "waf_platform.h"
#include "stm32l4xx_hal_flash_ex.h"
#define PLATFORM_INTERNAL_FLASH_WRITE_SIZE_BYTES            (8)
#define PLATFORM_INTERNAL_FLASH_WRITE_SIZE_MASK             (PLATFORM_INTERNAL_FLASH_WRITE_SIZE_BYTES - 1)
#define PLATFORM_INTERNAL_FLASH_ADRESS_ROUND_UP(a)          (((a) + PLATFORM_INTERNAL_FLASH_WRITE_SIZE_MASK) & (uint32_t)(~(PLATFORM_INTERNAL_FLASH_WRITE_SIZE_MASK)))
#define PLATFORM_INTERNAL_FLASH_ADRESS_ROUND_DOWN(a)        ((a) & (uint32_t)(~(PLATFORM_INTERNAL_FLASH_WRITE_SIZE_MASK)))
#define PLATFORM_INTERNAL_FLASH_ADDRESS_PTR_ROUND_UP(p)     ((void*)PLATFORM_INTERNAL_FLASH_ADRESS_ROUND_UP((uint32_t)(p)))
#define PLATFORM_INTERNAL_FLASH_ADDRESS_PTR_ROUND_DOWN(p)   ((void*)PLATFORM_INTERNAL_FLASH_ADRESS_ROUND_DOWN((uint32_t)(p)))
#define PLATFORM_INTERNAL_FLASH_OFFSET(a)                   ((uint32_t)(a) & (PLATFORM_INTERNAL_FLASH_WRITE_SIZE_MASK) )
#define PLATFORM_INTERNAL_FLASH_WRITE_SIZE_IS_ALIGNED(a)    (((uint32_t)(a) & (PLATFORM_INTERNAL_FLASH_WRITE_SIZE_MASK)) == 0)
#define PLATFORM_INTERNAL_FLASH_WRITE_ADDRESS_IS_ALIGNED(a) (((uint32_t)(a) & (PLATFORM_INTERNAL_FLASH_WRITE_SIZE_MASK)) == 0)
#define APP_CODE_START_ADDR   ((uint32_t)&app_code_start_addr_loc)

platform_result_t platform_erase_flash( uint16_t start_page, uint16_t end_page )
{
    FLASH_EraseInitTypeDef flash_erase;
    uint32_t erase_error;

    HAL_FLASH_Unlock( );

    /* Clear any error flags */
    __HAL_FLASH_CLEAR_FLAG( FLASH_FLAG_EOP | FLASH_FLAG_OPERR | FLASH_FLAG_WRPERR | FLASH_FLAG_PGAERR | FLASH_FLAG_PGSERR );

    platform_watchdog_kick( );

    flash_erase.Banks     = GetBank( start_page );
    flash_erase.TypeErase = FLASH_TYPEERASE_PAGES;
    flash_erase.Page      = start_page;
    flash_erase.NbPages   = ( uint32_t )( ( end_page - start_page ) + 1 );
    if ( HAL_FLASHEx_Erase( &flash_erase, &erase_error ) != HAL_OK )
    {
        HAL_FLASH_Lock( );
        return PLATFORM_ERROR;
    }

    platform_watchdog_kick( );
    HAL_FLASH_Lock( );
    return PLATFORM_SUCCESS;
}

platform_result_t platform_write_flash_chunk( uint32_t address, const void* data, uint32_t size )
{
    uint32_t page_offset;
    uint32_t space_available_in_page;
    uint32_t space_available_in_dw;
    uint32_t page_number;
    uint32_t size_remaining;
    uint8_t *src_address;
    uint32_t dst_address;
    uint32_t start_page;
    uint32_t end_page;
    uint32_t flash_write_aligned_address;
    platform_result_t result = PLATFORM_SUCCESS;

    /* TODO - Ensure that the write is within the same page/sector/bank ? */
    /* if data to be written is already present in flash , return */
    if ( memcmp( (void*) address, (void*) data, size ) == 0 )
    {
        return PLATFORM_SUCCESS;
    }

    start_page                  = GetPage( address );
    end_page                    = GetPage( address + size );
    flash_write_aligned_address = PLATFORM_INTERNAL_FLASH_ADRESS_ROUND_DOWN( address );
    size_remaining              = size;
    src_address                 = (uint8_t*) data;
    dst_address                 = address;


    /* TOD0 - Calloc the temp_buffer */
    for ( page_number = start_page; page_number <= end_page; page_number++ )
    {
        /* is flash chunk is erased */
        if ( is_flash_chunk_erased( (uint8_t*) flash_write_aligned_address, PLATFORM_INTERNAL_FLASH_ADRESS_ROUND_UP( size ) ) == WICED_TRUE )
        {
            page_offset = ( dst_address % FLASH_PAGE_SIZE );
            space_available_in_page = MIN( ( FLASH_PAGE_SIZE - page_offset ), size_remaining );

            /* loop and write Double words in each iteration */
            while ( space_available_in_page != 0 )
            {
                uint32_t i            = 0;
                uint32_t dw_offset    = ( dst_address % PLATFORM_INTERNAL_FLASH_WRITE_SIZE_BYTES );
                uint8_t dw[ 8 ]       = { 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff };
                uint64_t *double_word = (uint64_t*) dw;

                space_available_in_dw = MIN( ( PLATFORM_INTERNAL_FLASH_WRITE_SIZE_BYTES - dw_offset ), space_available_in_page );
                for ( i = 0; i < space_available_in_dw; i++ )
                {
                    dw[ dw_offset++ ] = *src_address++;
                }

                HAL_FLASH_Unlock( );

                if ( HAL_FLASH_Program( FLASH_TYPEPROGRAM_DOUBLEWORD, flash_write_aligned_address, *double_word ) != HAL_OK )
                {
                    result = PLATFORM_ERROR;
                    HAL_FLASH_Lock( );
                    goto exit_platform_write_flash_chunk;
                }

                HAL_FLASH_Lock( );
                size_remaining              -= space_available_in_dw;
                dst_address                 += space_available_in_dw;
                flash_write_aligned_address += PLATFORM_INTERNAL_FLASH_WRITE_SIZE_BYTES;
                space_available_in_page     -= space_available_in_dw;
            }
        }
        /* flash chunk is not erased */
        else
        {
            uint8_t temp_buffer[ FLASH_PAGE_SIZE ];

            /* copy page to temp_buffer */
            memcpy( temp_buffer, (uint8_t*) ( FLASH_BASE + page_number * FLASH_PAGE_SIZE ), FLASH_PAGE_SIZE );

            /* erase page */
            platform_erase_flash( (uint16_t) page_number, (uint16_t) page_number );

            /* modify temp buffer */
            page_offset = ( dst_address % FLASH_PAGE_SIZE );
            space_available_in_page = MIN( ( FLASH_PAGE_SIZE - page_offset ), size_remaining );
            memcpy( temp_buffer + page_offset, src_address, space_available_in_page );

            /* write temp_buffer to the page */
            if ( Flash_PageWrite( page_number, temp_buffer ) != PLATFORM_SUCCESS )
            {
                result = PLATFORM_ERROR;
                goto exit_platform_write_flash_chunk;
            }

            size_remaining              -= space_available_in_page;
            dst_address                 += space_available_in_page;
            src_address                 += space_available_in_page;
            flash_write_aligned_address += space_available_in_page;
        }
    }

    if ( memcmp( (void*) address, (void*) data, size ) != 0 )
    {
        result = PLATFORM_ERROR;
        __asm__("bkpt");
    }

exit_platform_write_flash_chunk:

    return result;
}
